<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StudentInfoUpdate"
    android:background="@color/col9">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="10dp"
        android:textSize="24dp"
        android:text="@string/studentdetails" />

    <TextView
        android:textSize="18dp"
        android:paddingStart="11dp"
        android:textStyle="bold"
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@+id/stuname"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:background="@color/white"
        android:ems="10"
        android:layout_gravity="center"
        android:hint="@string/entername"
        android:inputType="textPersonName"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/School"
        android:paddingStart="11dp"
        android:textSize="18dp"
        android:textStyle="bold"
        android:paddingTop="10dp"/>

    <EditText
        android:id="@+id/stuschool"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/enterschool"
        android:inputType="textPersonName"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grade"
        android:textSize="18dp"
        android:paddingStart="11dp"
        android:paddingTop="10dp"
        android:textStyle="bold"/>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="58dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        android:indeterminateTint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/grade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:entries="@array/grades"
         />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/board"
        android:textSize="18dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/board"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/board"
        android:paddingBottom="10dp" />

    <Button
        android:id="@+id/submit"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/round_button_2"
        android:text="@string/submit" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>