<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/col7"
    tools:context=".UserTypeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/hi"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/hi"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textStyle="italic"
            android:textSize="28dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="181dp"
            android:layout_height="match_parent"
            android:background="@color/col5"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:background="@color/col1"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/studentlogo"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="78dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Student"
                android:textStyle="bold"
                android:textSize="20dp"/>

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="match_parent"
                android:layout_height="226dp"
                android:background="@color/col2"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/parentslogo"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="78dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="@string/Parents" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="187dp"
            android:layout_height="match_parent"
            android:background="@color/col6"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:background="@color/col3"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/teacherlogo"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="78dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/Teacher" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="match_parent"
                android:layout_height="226dp"
                android:background="@color/col4"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/institutionlogo"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="78dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="@string/Institutions" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>