<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <TextView
                android:id="@+id/textView"
                android:textColor="@color/pinkish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Assignmenttest"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="24dp" />

            <Button
                android:id="@+id/Button"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/color_gradient"
                android:text="@string/Assignment"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/assignment_icon"
                android:drawableRight="@drawable/arrow_icon"
                android:paddingRight="10dp"
                android:paddingLeft="20dp"
                />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/color_gradient_2"
                android:text="@string/Assignment"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/assignment_icon"
                android:drawableRight="@drawable/arrow_icon"
                android:paddingRight="10dp"
                android:paddingLeft="20dp"/>

            <Button
                android:id="@+id/Button6"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/color_gradient_1"
                android:drawableLeft="@drawable/test_icon"
                android:text="@string/Testongoing"
                android:paddingLeft="30dp"
                android:drawableRight="@drawable/arrow_icon"
                android:paddingRight="10dp"/>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/Testongoing"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/color_gradient_3"
                android:drawableLeft="@drawable/test_icon"
                android:paddingLeft="30dp"
                android:drawableRight="@drawable/arrow_icon"
                android:paddingRight="10dp"
                />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/color_gradient_2"
                android:text="@string/Testupcoming"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/test_icon"
                android:paddingLeft="30dp"
                android:drawableRight="@drawable/arrow_icon"
                android:paddingRight="10dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp">
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/cover" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>